refactor: small integration tests refactoring